--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-form": "^3.5.6",
     "react-scripts": "2.0.5",
     "tachyons": "^4.11.1"
   },
