--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.6.0",
     "react-form": "^3.5.6",
     "react-scripts": "2.0.5",
+    "react-select": "^2.1.1",
     "tachyons": "^4.11.1"
   },
   "scripts": {
