--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-form": "^3.5.6",
     "react-scripts": "2.0.5",
     "react-select": "^2.1.1",
-    "tachyons": "^4.11.1"
+    "tachyons": "^4.11.1",
+    "urljoin": "^0.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
